--- a/UI/index.html
+++ b/UI/index.html
@@ -44,7 +44,7 @@
 			*/
 			botOptions.test = true;
 			botOptions.koreAnonymousFn = koreAnonymousFn;
-			botOptions.clientId   = " cs-b987e712-2372-51d2-b624-2cce6fee2db2"; // secure client-id
+			botOptions.clientId   = "cs-b987e712-2372-51d2-b624-2cce6fee2db2"; // secure client-id
 
 			botOptions.botInfo = {name:"Kore Temenos Banking Assistant","_id":"st-cd0e471e-10e1-5048-ac41-33d74cc39144"}; // bot name is case sensitive
 			
@@ -87,11 +87,11 @@
 	</head>
 	<body style="width: 100%; height: 100%;  margin:0; padding:0;">
 	<div style="width:100%; z-index:0; height:100%;">
-	    <img style="width: 100%;" src="../libs/images/banking.jpg"/>
+	    <img style="width: 100%;" src="../libs/images/koreinsu.jpg"/>
 		
 	</div>
 		<div id="chatContainer" >
-		<button class="openChatWindow" >Open Chat Window</button>
+		<button class="openChatWindow">Open Chat Window</button>
 		</div>
 	</body>
 </html>
