--- a/UI/index.html
+++ b/UI/index.html
@@ -82,12 +82,20 @@
 		.openChatWindow:hover{
 		border: 1px solid #009dab;
 		}
+	.fit { /* set relative picture size */
+    max-width: 100%;
+    max-height: 100%;
+  }
+  .center {
+    display: block;
+    margin: auto;
+  }
 		
 		</style>
 	</head>
 	<body style="width: 100%; height: 100%;  margin:0; padding:0;">
 	<div style="width:90%; z-index:0; height:40%;">
-	    <img style="width:100%;" src="../libs/images/bank.jpg"/>
+	    <img style="width:100%;" src="../libs/images/bank.jpg" class="center fit"/>
 		
 	</div>
 		<div id="chatContainer" >
