--- a/UI/index.html
+++ b/UI/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE>
 <html>
+<title>Avenir Banking Bot</title>
 	<head>
 		<script src="libs/jquery.js" type="text/javascript"></script>
 		<script src="libs/jquery.tmpl.min.js" type="text/javascript"></script>
