--- a/UI/index.html
+++ b/UI/index.html
@@ -96,7 +96,7 @@
 	</head>
 	<body style="width: 100%; height: 100%;  margin:0; padding:0;">
 
-	    <img style="width:100%;" src="./libs/images/bank.jpg" class="center fit"/>
+	    <img style="width:100%;" src="./libs/images/bankkk.jpg" class="center fit"/>
 		
 
 		<div id="chatContainer" >
