--- a/UI/index.html
+++ b/UI/index.html
@@ -47,7 +47,7 @@
 			botOptions.koreAnonymousFn = koreAnonymousFn;
 			botOptions.clientId   = "cs-b987e712-2372-51d2-b624-2cce6fee2db2"; // secure client-id
 
-			botOptions.botInfo = {name:"Kore Temenos Banking Assistant","_id":"st-cd0e471e-10e1-5048-ac41-33d74cc39144"}; // bot name is case sensitive
+			botOptions.botInfo = {name:"Avenir Banking Bot","_id":"st-cd0e471e-10e1-5048-ac41-33d74cc39144"}; // bot name is case sensitive
 			
 			var chatConfig={
 				botOptions:botOptions,
