changed index html

--- a/UI/index.html
+++ b/UI/index.html
@@ -21,7 +21,7 @@
 					url: "https://devbots.kore.net/api/users/sts",
 					type: 'post',
 					headers: {
-						Authorization: "Basic S09SRU1CMToxMjM0NTY="
+						Authorization: "bearer xyz----"
 					},
 					dataType: 'json',
 					success: function (data) {
